# MedClaimsVerifier

./: .env.example  .gitignore  MEDVERIFY_TECHNICAL_DOCUMENTATION.md  Makefile  README.md  import_optimuskg_to_neo4j.py  import_primekg_to_neo4j.py  modal_app.py  ner_comparision.ipynb  pyproject.toml  requirements.txt  test_medcat_model.py
docker/: Dockerfile.api  README.md  docker-compose.yml
docker/neo4j-seed/: load_demo_subset.cypher
medverify_core/: __init__.py  config.py  verifier.py
scripts/: bootstrap.sh  build_demo_subset.py  demo.sh
src/: main.py
src/api/: routes.py
src/config/: logging.py  settings.py
src/middleware/: __init__.py  auth.py
src/models/: requests.py  responses.py
src/services/: cache.py  claim_triple_extractor.py  claim_verifier.py  drug_normalizer.py  gliner_client.py  knowledge_graph.py  llm_predicate_resolver.py  medcat_client.py  predicates.py  sapbert_normalizer.py  verification_logger.py
tests/: conftest.py  quality_eval.py  test_api.py  test_claim_verifier.py  test_data.json  test_knowledge_graph.py  test_medverify_core.py
tests/eval/: cases.yaml
tools/: analyze_logs.py  audit_eval_labels.py  build_sapbert_index.py  download_optimuskg.py  eval.py  scan_kg_coverage.py
ui/: app.py
ui-web/: README.md  package-lock.json  package.json  tailwind.config.ts
ui-web/src/app/: globals.css  layout.tsx  page.tsx
ui-web/src/app/explorer/: page.tsx
ui-web/src/app/extract/: page.tsx
ui-web/src/app/verify/: VerifyClient.tsx  page.tsx
ui-web/src/components/graph/: GraphLegend.tsx  Subgraph.tsx  graphTransforms.ts
ui-web/src/components/layout/: Footer.tsx  Topbar.tsx
ui-web/src/components/profile/: EntityProfile.tsx  FactList.tsx
ui-web/src/components/verify/: EntityChip.tsx  EvidenceTable.tsx  ExampleClaimGrid.tsx  HighlightedClaim.tsx  VerdictCard.tsx
ui-web/src/hooks/: useDebounced.ts
ui-web/src/lib/: api.ts  entityColors.ts  examples.ts  statusStyles.ts
ui-web/src/types/: medverify.ts
(+2 files in other folders)
